--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Initialize/Initialize.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Initialize/Initialize.config
@@ -2,13 +2,13 @@
   <components>
     <component
       id="AvenueClothing.Initialize.RunAvenueClothingInstaller"
-      service="UCommerce.Pipelines.IPipelineTask`1[[UCommerce.Pipelines.Initialization.InitializeArgs, UCommerce.Pipelines]], UCommerce"
+      service="Ucommerce.Pipelines.IPipelineTask`1[[Ucommerce.Pipelines.Initialization.InitializeArgs, Ucommerce.Pipelines]], Ucommerce"
       type="AvenueClothing.Installer.Pipelines.Initialize.RunAvenueClothingInstallerTask, AvenueClothing.Installer">
       <parameters>
         <installationPipeline>${AvenueClothing.InstallationPipeline}</installationPipeline>
       </parameters>
     </component>
-  
+
     <partial-component id="Initialize">
       <parameters>
         <tasks>
