--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
@@ -2,13 +2,13 @@
   <components>
     <!-- Pipeline Instance -->
     <component id="AvenueClothing.InstallationPipeline"
-				   service="UCommerce.Pipelines.IPipeline`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+				   service="Ucommerce.Pipelines.IPipeline`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
 				   type="AvenueClothing.Installer.Pipelines.Installation.InstallationPipeline, AvenueClothing.Installer">
       <parameters>
         <tasks>
           <array>
-            <value>${AvenueClothing.InstallationPipeline.CreateUCommerceSettings}</value>
-            <value>${AvenueClothing.InstallationPipeline.CreateUCommerceCatalog}</value>
+            <value>${AvenueClothing.InstallationPipeline.CreateUcommerceSettings}</value>
+            <value>${AvenueClothing.InstallationPipeline.CreateUcommerceCatalog}</value>
             <value>${AvenueClothing.InstallationPipeline.CreateMarketingCampaign}</value>
             <value>${AvenueClothing.InstallationPipeline.UpdateStandardValuesForDefinitions}</value>
             <value>${AvenueClothing.InstallationPipeline.RunScratchIndexer}</value>
@@ -25,48 +25,48 @@
 
     <!-- Pipeline Tasks-->
     <component id="AvenueClothing.InstallationPipeline.ClearSitecoreCache"
-				   service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+				   service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
 				   type="AvenueClothing.Installer.Pipelines.Installation.Tasks.ClearSitecoreCacheTask, AvenueClothing.Installer" />
 
-    <component id="AvenueClothing.InstallationPipeline.CreateUCommerceCatalog"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
-       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateUCommerceCatalogTask, AvenueClothing.Installer" />
+    <component id="AvenueClothing.InstallationPipeline.CreateUcommerceCatalog"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateUcommerceCatalogTask, AvenueClothing.Installer" />
 
     <component id="AvenueClothing.InstallationPipeline.CreateMarketingCampaign"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateMarketingCampaign, AvenueClothing.Installer" />
 
-    <component id="AvenueClothing.InstallationPipeline.CreateUCommerceSettings"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
-       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateUCommerceSettingsTask, AvenueClothing.Installer" />
+    <component id="AvenueClothing.InstallationPipeline.CreateUcommerceSettings"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateUcommerceSettingsTask, AvenueClothing.Installer" />
 
     <component id="AvenueClothing.InstallationPipeline.MoveSitecoreConfigurationFiles"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.MoveSitecoreConfigurationFilesTask, AvenueClothing.Installer" />
 
     <component id="AvenueClothing.InstallationPipeline.PublishMasterDatabase"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.PublishMasterDatabaseTask, AvenueClothing.Installer" />
 
     <component id="AvenueClothing.InstallationPipeline.RunScratchIndexer"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.RunScratchIndexerTask, AvenueClothing.Installer" />
 
 		<component id="AvenueClothing.InstallationPipeline.SynchronizeSitecoreItems"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.SynchronizeSitecoreItemsTask, AvenueClothing.Installer">
 		</component>
 
     <component id="AvenueClothing.InstallationPipeline.UpdateStandardValuesForDefinitions"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.UpdateStandardValuesForDefinitionsTask, AvenueClothing.Installer" />
 
     <component id="AvenueClothing.InstallationPipeline.RenameWebConfigIfMissing"
-       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.RenameWebConfigIfMissingTask, AvenueClothing.Installer" />
 
     <component id="AvenueClothing.InstallationPipeline.AddClientDependencyBundlesToIgnoreUrlPrefixes"
-               service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+               service="Ucommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], Ucommerce"
                type="AvenueClothing.Installer.Pipelines.Installation.Tasks.AddClientDependencyBundlesToIgnoreUrlPrefixesTask, AvenueClothing.Installer" />
   </components>
 </configuration>
