--- a/src/AvenueClothing.Tests/packages.config
+++ b/src/AvenueClothing.Tests/packages.config
@@ -3,8 +3,15 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net471" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net471" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net471" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net471" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net471" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net471" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net471" />
   <package id="uCommerce.Core" version="9.2.0.20195" targetFramework="net471" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net471" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net471" />
