--- a/src/AvenueClothing.Foundation.MvcExtensions/packages.config
+++ b/src/AvenueClothing.Foundation.MvcExtensions/packages.config
@@ -18,4 +18,5 @@
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net471" />
   <package id="System.Threading" version="4.0.11" targetFramework="net471" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net471" />
+  <package id="uCommerce.Core" version="9.3.0.20261" targetFramework="net471" />
 </packages>
