--- a/src/AvenueClothing.Installer/App_Config/Include/Unicorn/Unicorn.DataProvider.config
+++ b/src/AvenueClothing.Installer/App_Config/Include/Unicorn/Unicorn.DataProvider.config
@@ -36,14 +36,14 @@
 		<databases>
 			<database id="master">
 				<dataProviders>
-					<dataProvider ref="dataProviders/main">
+					<dataProvider ref="dataProviders/main" param1="$(id)">
 						<patch:attribute name="ref">dataProviders/unicorn</patch:attribute>
 					</dataProvider>
 				</dataProviders>
 			</database>
 			<database id="core">
 				<dataProviders>
-					<dataProvider ref="dataProviders/main">
+					<dataProvider ref="dataProviders/main" param1="$(id)">
 						<patch:attribute name="ref">dataProviders/unicorn</patch:attribute>
 					</dataProvider>
 				</dataProviders>
